        -Speed armor - full set provides speed, jump boost, and step assist
        -Fire armor - full set provides fire resistance
        -Health armor - full set provides regeneration
    -Fully Implemented the fire and healing creepers (Healing Creeper works but there are currently not particle effects that show that)
    

1.3 CHANGELOG
    -Fixed the effects on the healing axe
    -Added Energy Cores (Rare drops from the respective creeper)
    -Added Energy Core Fragments
    -Added dust and small piles of dust for each gem
    -Added Active Energy Cores
    -Added Basic Collector - Collects gem particles out of this air
    -Added a Capacitor Multiblock made out of the following components:
        -Capacitor Controller
        -Capacitor Wall
        -Capacitor Glass
        -Speed Capacitor
        -Fire Capacitor
        -Health Capacitor
        -Strength Capacitor
    -Added Basic Generator
    -Added Speed Generator
    -Added Fire Generator
    -Added Health Generator
    -Added Strength Generator
    -Added Speed Collector
    -Added Strength Collector
    -Added Cleaner
    -Added Basic Extractor
    -Added Speed Extractor
    -Added Strength Extractor
    -Added Fire Extractor
    
1.3.1 CHANGELOG
    -Fixed Item names not appearing in guis
    -Fixed special axe recipes being inconsistent
    -Fixed Items not dropping when the collector was broken
    -Added a new collector gui
    -Added Opal Generator
    -Added Topaz Generator
    -Added Ruby Generator
    -Added Sapphire Generator
    -Added Linking Tool
    
1.3.1 TODO:
    -NBT on capacitor storing machines
    -NBT on machines storing energy
    -Fix gui on collectors
    -Add hovering tooltips for all machine storages
    -Collector Names
    -Make collectors work
    -Make machines accept more energy than they use
    
1.4 CHANGELOG
    -Added experience to special tools
    -Added a skill points gui for the tools
    
1.4.1 CHANGELOG
    -Code Cleanup